<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <Button android:id="@+id/btn_signout"
            android:layout_below="@+id/my_toolbar"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/btn_sign_out"/>

    <LinearLayout android:layout_below="@+id/btn_signout" android:id="@+id/ll_details"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
        <EditText android:id="@+id/edt_title"
                  android:maxLines="1"
                  android:imeOptions="actionNext"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:singleLine="true"
                  android:hint="@string/hint_title"/>
        <EditText android:id="@+id/edt_agenda"
                  android:maxLines="1"
                  android:imeOptions="actionNext"
                  android:layout_width="match_parent"
                  android:singleLine="true"
                  android:layout_height="wrap_content"
                  android:hint="@string/hint_agenda"/>
        <EditText android:id="@+id/edt_participants"
                  android:maxLines="1"
                  android:singleLine="true"
                  android:imeOptions="actionDone" android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/hint_participants"/>

        <LinearLayout android:layout_below="@+id/btn_signout"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:weightSum="3"
                      android:orientation="horizontal">

            <TextView
                    android:text="Date"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:id="@+id/text_date"
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button android:id="@+id/edt_date"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:onClick="showDatePickerDialog"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_date"/>
        </LinearLayout>

        <Button android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_submit"
        />
    </LinearLayout>

    <TextView
            android:text="No Events Found"
            android:layout_below="@+id/ll_details"
            android:layout_width="match_parent"
            android:gravity="top|center"
            android:layout_height="match_parent"/>
    <ListView android:layout_below="@+id/ll_details"
              android:background="@android:color/white"
              android:id="@+id/lst_events" android:layout_width="match_parent"
              android:layout_height="wrap_content"
    />


</RelativeLayout>