<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UpdateEventActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            app:title="Edit Event"
            app:titleTextColor="@android:color/black"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>


    <LinearLayout android:id="@+id/ll_details"
                  android:layout_width="match_parent"
                  android:layout_below="@+id/my_toolbar"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
        <EditText android:id="@+id/edt_title" android:maxLines="1"
                  android:imeOptions="actionNext"
                  android:singleLine="true"
                  android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:hint="@string/hint_title"/>
        <EditText android:id="@+id/edt_agenda" android:maxLines="1"
                  android:imeOptions="actionNext"
                  android:singleLine="true"
                  android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:hint="@string/hint_agenda"/>
        <EditText android:id="@+id/edt_participants"
                  android:imeOptions="actionDone"
                  android:maxLines="1"
                  android:singleLine="true"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/hint_participants"/>

        <LinearLayout android:layout_below="@+id/btn_signout"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:weightSum="3"
                      android:orientation="horizontal">

            <TextView
                    android:text="Date"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:id="@+id/text_date"
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button android:id="@+id/edt_date"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:onClick="showDatePickerDialog"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_date"/>
        </LinearLayout>

        <Button android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Update Event"
        />
    </LinearLayout>


</RelativeLayout>